--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
     "eject": "expo eject"
   },
   "dependencies": {
@@ -15,13 +14,18 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "styled-components": "^5.3.3",
+    "typescript": "4.4.4",
+    "react-redux": "^7.2.0",
+    "@reduxjs/toolkit": "^1.5.1",
+    "@react-native-async-storage/async-storage": "1.16.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
-    "typescript": "~4.3.5"
+    "@types/react-redux": "^7.1.7",
+    "@types/styled-components": "5.1.0"
   },
   "private": true
 }
