--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "styled-components": "^5.3.3",
-    "typescript": "4.4.4",
+    "typescript": "~4.3.5",
     "react-redux": "^7.2.0",
     "@reduxjs/toolkit": "^1.5.1",
-    "@react-native-async-storage/async-storage": "1.16.0"
+    "@react-native-async-storage/async-storage": "~1.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
